<resources>
    <string name="app_name">Calculadora Simples</string>
    <string name="value_1">Valor 1:</string>
    <string name="value_2">Valor 2:</string>
    <string name="result_is">Resultado é:</string>
    <string name="divide_button">/</string>
    <string name="multiplication_button">*</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="clear_button">C</string>
    <string name="backspace_button">&lt;&lt;</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="dot_button">.</string>
    <string name="zero_button">0</string>
    <string name="equal_button">=</string>
</resources>
