<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cacau2.pratica1.calculadoraAvancada">


    <TableLayout
        android:layout_width="325dp"
        android:layout_height="325dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/values_to_calculate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="5"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/seven_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/eight_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/nine_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/opDivide"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/divide_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/opBackspace"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/backspace_button"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/four_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/five_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/six_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/opMulti"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/multiplication_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/opClear"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/clear_button"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/one_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/two_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/three_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/opMinus"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/minus_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/opEqual"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/equal_button"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_span="2"
                android:text="@string/zero_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/opDot"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/dot_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/opPlus"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:text="@string/plus_button"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>